crates/shipper-core/src/ops/lock/snapshots/shipper_core__ops__lock__snapshot_tests__error_corrupt_lock_file_prefix.snap
---
source: crates/shipper-core/src/ops/lock/mod.rs
expression: "\"failed to parse lock JSON\""
---
failed to parse lock JSON
