crates/shipper-core/src/ops/lock/snapshots/shipper_core__ops__lock__snapshot_tests__error_fresh_lock_with_timeout_prefix.snap
---
source: crates/shipper-core/src/ops/lock/mod.rs
expression: "\"lock already held by current process (fresh lock within timeout)\""
---
lock already held by current process (fresh lock within timeout)
