crates/shipper-core/src/ops/lock/snapshots/shipper_core__ops__lock__snapshot_tests__error_lock_already_held_with_plan_id.snap
---
source: crates/shipper/src/ops/lock/mod.rs
expression: err.to_string()
---
lock already held by pid 42 on build-host since 2025-01-15 12:00:00 UTC (plan_id: Some("active-plan"))
