crates/shipper-core/src/ops/lock/snapshots/shipper_core__ops__lock__snapshot_tests__error_read_nonexistent_lock_prefix.snap
---
source: crates/shipper-core/src/ops/lock/mod.rs
expression: "\"failed to read lock file\""
---
failed to read lock file
