crates/shipper-core/src/ops/lock/snapshots/shipper_core__ops__lock__snapshot_tests__lock_file_content_with_plan_id.snap
---
source: crates/shipper/src/ops/lock/mod.rs
expression: json
---
{
  "pid": 42,
  "hostname": "build-host",
  "acquired_at": "2025-01-15T12:00:00Z",
  "plan_id": "release-2025-01-15"
}
