crates/shipper-core/src/ops/lock/snapshots/shipper_core__ops__lock__snapshot_tests__lock_path_without_root.snap
---
source: crates/shipper-core/src/ops/lock/mod.rs
expression: "p.to_string_lossy().replace('\\\\', \"/\")"
---
.shipper/lock
